================================
Qtilities v1.0 Changes
================================
    General:
    ============================
    - Documentation
        - Documentation now uses Doxygen's COLORSTYLE parameters to style the docs properly.
        - Getting Started article improved and updated, especially the Linux information.
        - The Basics article now uses a more usefull example. The previous one did not compile either.
        - Lots of classes' documentation improved and extended.
    - Some places in Qtilities uses folders under the application directory, for example: "/session" to save session related data like logging configurations, shortcut mappings etc. Previously these save operations failed if there was no session directory under the application folder. In this version the "/session" directory is automatically created when needed and the actual path used for the session directory is defined using qti_def_PATH_SESSION. You can now change the seesion path using QtilitiesCoreApplication::setApplicationSessionPath() and get it using QtilitiesCoreApplication::applicationSessionPath().
    - Removed Qtilities::Plugin::Help namespace from documentation. This plugin is not part of Qtilities yet.
    - Got rid of all the "warning: type qualifiers ignored on function return type" & unused parameter warnings when building with gcc.
    - Ubuntu: Fixed icon display & resource loading problems.
    - Added this changes.txt file.
    - All constants defined by Qtilities now starts with "qti_".
    - Qtilities.pri now uses the QMake $$PWD functionality, thus you don't need to set an absolute path to where you placed Qtilities on your hard drive.
    - All dependency build configuration options are now defined in Dependencies.pri.
    - All settings stored in QSettings throughout the Qtilities modules are now stored in a seperate ini file at QtilitiesCoreApplication::qtilitiesSettingsPath().