@@ -64,9 +64,8 @@ The table below provides links to detailed overviews and tutorials.
 <td style="vertical-align:top">
 - <a href="http://www.qtilities.org">Website</a><br>
 - <a href="http://qtilities.blogspot.com/">Blog</a><br>
-- <a href="http://code.google.com/p/qtilities/issues/list">Bug Tracker</a><br>
-- <a href="http://gitorious.org/qtilities">Source Repository</a><br>
-- <a href="http://www.qtilities.org/roadmap.html">Roadmap & Changelogs</a><br>
+- <a href="https://github.com/JPNaude/Qtilities/issues">Issue Tracker</a><br>
+- <a href="https://github.com/JPNaude/Qtilities">Source Repository</a><br>
 - <a href="http://groups.google.com/group/qtilities?hl=en?hl=en/">Mailing List</a><br>
 - <a href="page_whats_new.html">What's New</a><br>
 </td>
