@@ -73,11 +73,11 @@ Table of contents:
 
 \section getting_started_getting_and_building Getting and Building Qtilities
 
-The project sources are hosted using the Git version control system on http://www.gitorious.org and can be accessed directly at http://gitorious.org/qtilities
+The project sources are hosted using the Git version control system on http://www.github.com and can be accessed directly at https://github.com/JPNaude/Qtilities.
 
 Detailed instructions on how to get started are shown below. Alternatively you can view the latest build instructions from the Gitorious repository:
-- <a href="http://gitorious.org/qtilities/qtilities/blobs/master/Building%20On%20Windows.txt">Building on Windows</a>
-- <a href="http://gitorious.org/qtilities/qtilities/blobs/master/Building%20On%20Linux.txt">Building on Linux</a>
+- <a href="http://github.com/JPNaude/Qtilities/blob/master/Building%20On%20Windows.txt">Building on Windows</a>
+- <a href="http://github.com/JPNaude/Qtilities/blob/master/Building%20On%20Linux.txt">Building on Linux</a>
 
 Is is not neccesarry to have a Gitorious account in order to clone the repository. It is however recommended to create an account and then clone the repository on the Gitorious website. If you are new to Gitorious, make sure to read through the <a href="http://gitorious.org/qtilities/qtilities/blobs/master/Gitorious%20Tips.txt">Gitorious Tips</a>.
 
@@ -138,7 +138,7 @@ Connection analyzer for Qt
 Build Qtilities
 ===============
 1. Get the source code from gitorious/
-   Run the following command: git clone git://gitorious.org/qtilities/qtilities.git qtilities
+   Run the following command: git clone git://github.com/JPNaude/Qtilities.git qtilities
 2. Open the Qtilities.pro file in QtCreator located in the src folder.
 3. Check your project paths:
    Open the "Dependencies.pri" file located in the src folder and check that the paths are set up correctly.
@@ -214,7 +214,7 @@ Connection Analyzer for Qt
 Build Qtilities
 ===============
 1. Get the source code from gitorious
-   Run the following command: git clone git://gitorious.org/qtilities/qtilities.git qtilities
+   Run the following command: git clone git://github.com/JPNaude/Qtilities.git qtilities
 2. Open the Qtilities.pro file in QtCreator located in the src folder.
 3. Check your project paths:
    Open the "Dependencies.pri" file located in the src folder and check that the paths are set up correctly.
